syntax = "proto3";
option go_package = "pb";


import "google/protobuf/timestamp.proto";
import "contracts.proto";

message Post {
    string slug                         = 1;
    ID vendorID                         = 2;
    string status                       = 3;
    string longForm                     = 4;
    repeated Image images               = 5;
    repeated string tags                = 6;
    repeated string channels            = 7;
    PostType postType                   = 8;
    string reference                    = 9;
    google.protobuf.Timestamp timestamp = 10;

    message Image {
        string filename = 1;
        string original = 2;
        string large    = 3;
        string medium   = 4;
        string small    = 5;
        string tiny     = 6;
    }

    enum PostType {
        POST        = 0;
        COMMENT     = 1;
        REPOST      = 2;
    }
}

message SignedPost {
    Post post           = 1;
    string hash         = 2;
    bytes signature     = 3;
}
